<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="center"
        android:src="@drawable/title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:text="@string/menu"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonCold"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/square_button"
            android:text="@string/coldDrinks"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/botonHot"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/square_button"
            android:text="@string/hotDrinks"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/botonSweets"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/square_button"
            android:text="@string/sweets"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/botonSalties"
            android:layout_width="150dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/square_button"
            android:text="@string/salties"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>