<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:src="@drawable/thecheezery" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="25dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="25dp"
            android:text="@string/text"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <Button
            android:id="@+id/boton"
            android:layout_width="237dp"
            android:layout_height="39dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/started"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>